# desktop-pet

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-check.yml  build-mac.yml  build-windows.yml  release.yml
Casks/: desktop-pet.rb
DesktopPet/: DesktopPet.entitlements
DesktopPet.Windows/: App.manifest  App.manifest.rc  CMakeLists.txt  Resource.h  Resource.rc  icon.rc  installer.nsi  manifest.rc
DesktopPet.Windows/App/: AppController.cpp  AppController.h  WinMain.cpp
DesktopPet.Windows/Playback/: APNGDecoder.cpp  APNGDecoder.h  AnimationPlayer.cpp  AnimationPlayer.h  FrameSequence.h  GIFDecoder.cpp  GIFDecoder.h  PNGSequenceDecoder.cpp  PNGSequenceDecoder.h  VideoPlayer.cpp  VideoPlayer.h
DesktopPet.Windows/Settings/: AppSettings.cpp  AppSettings.h  SettingsDialog.cpp  SettingsDialog.h
DesktopPet.Windows/TrayIcon/: TrayController.cpp  TrayController.h
DesktopPet.Windows/Utilities/: PlaceholderAnimation.cpp  PlaceholderAnimation.h
DesktopPet.Windows/Window/: OverlayWindow.cpp  OverlayWindow.h  PetRender.cpp  PetRender.h
DesktopPet.Windows/bucket/: desktop-pet.json
DesktopPet.Windows/winget/: desktop-pet.yaml
DesktopPet.xcodeproj/: project.pbxproj
DesktopPet/App/: AppDelegate.swift  Info.plist  main.swift
DesktopPet/Assets.xcassets/AccentColor.colorset/: Contents.json
DesktopPet/MenuBar/: MenuBarController.swift
DesktopPet/Playback/: AnimationPlayer.swift
DesktopPet/Settings/: AppSettings.swift  PetsStore.swift  SettingsView.swift
DesktopPet/Utilities/: PlaceholderAnimation.swift  SecurityScopedAccess.swift
DesktopPet/Window/: OverlayWindowController.swift  PetView.swift
Tests/: OverlayWindowControllerTests.swift  PetsStoreTests.swift
desktop-pet/: Info.plist
docs/: architecture.md  build-and-run.md  formats.md  performance.md  troubleshooting.md
docs/changes/: 2026-04-06-brew-quarantine-workaround.md  2026-04-06-notarized-macos-release.md  2026-04-06-persistence-followup-fix.md  2026-04-06-persistent-pet-store-and-multi-import.md
